syntax = "proto2";

package benjaminwicks.structureddatademo.model.protobuf.google;

option java_package = "com.benjaminwicks.structureddatademo.model.protobuf.google";

message SpeciesList {

    repeated Species speciesList = 1;

    message Species {
        optional string kingdom = 1;
        optional string parent = 2;
        optional string family = 3;
        optional string imageURL = 4;
        optional string lastInterpreted = 5;
        optional string accordingTo = 6;
        optional int32 speciesKey = 7;
        optional string canonicalName = 8;
        optional string theClass = 9;
        optional string order = 10;
        optional string phylum = 11;
        optional string scientificName = 12;
        optional string authorship = 13;
        optional string genus = 14;
        optional int32 parentKey = 15;
        optional string species = 16;
        optional string lastCrawled = 17;
    }
}
